@@ -40,6 +40,7 @@ import java.io.FileNotFoundException;
 import java.io.FilenameFilter;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.OutputStream;
 import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.nio.file.Files;
@@ -50,6 +51,7 @@ import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.jar.Attributes;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
@@ -58,10 +60,7 @@ import java.util.logging.Logger;
 import jenkins.ClassLoaderReflectionToolkit;
 import jenkins.ExtensionFilter;
 import jenkins.plugins.DetachedPluginsUtil;
-import jenkins.util.AntClassLoader;
-import jenkins.util.SystemProperties;
 import jenkins.util.URLClassLoader2;
-import org.apache.commons.io.output.NullOutputStream;
 import org.apache.tools.ant.BuildException;
 import org.apache.tools.ant.Project;
 import org.apache.tools.ant.taskdefs.Expand;
@@ -86,11 +85,6 @@ public class ClassicPluginStrategy implements PluginStrategy {
     private static final FilenameFilter JAR_FILTER = (dir, name) -> name.endsWith(".jar");
 
     private final PluginManager pluginManager;
-
-    /**
-     * All the plugins eventually delegate this classloader to load core, servlet APIs, and SE runtime.
-     */
-    private final MaskingClassLoader coreClassLoader = new MaskingClassLoader(getClass().getClassLoader());
 
     public ClassicPluginStrategy(PluginManager pluginManager) {
         this.pluginManager = pluginManager;
@@ -236,16 +230,8 @@ public class ClassicPluginStrategy implements PluginStrategy {
 
         fix(atts, optionalDependencies);
 
-        // Register global classpath mask. This is useful for hiding JavaEE APIs that you might see from the container,
-        // such as database plugin for JPA support. The Mask-Classes attribute is insufficient because those classes
-        // also need to be masked by all the other plugins that depend on the database plugin.
-        String masked = atts.getValue("Global-Mask-Classes");
-        if (masked != null) {
-            for (String pkg : masked.trim().split("[ \t\r\n]+"))
-                coreClassLoader.add(pkg);
-        }
-
-        ClassLoader dependencyLoader = new DependencyClassLoader(coreClassLoader, archive, Util.join(dependencies, optionalDependencies), pluginManager);
+        ClassLoader dependencyLoader = new DependencyClassLoader(
+                getClass().getClassLoader(), archive, Util.join(dependencies, optionalDependencies), pluginManager);
         dependencyLoader = getBaseClassLoader(atts, dependencyLoader);
 
         return new PluginWrapper(pluginManager, archive, manifest, baseResourceURL,
@@ -289,30 +275,21 @@ public class ClassicPluginStrategy implements PluginStrategy {
         boolean usePluginFirstClassLoader =
                 atts != null && Boolean.parseBoolean(atts.getValue("PluginFirstClassLoader"));
 
-        if (useAntClassLoader) {
-            AntClassLoader classLoader;
-            if (usePluginFirstClassLoader) {
-                classLoader = new PluginFirstClassLoader();
-                classLoader.setParentFirst(false);
-                classLoader.setParent(parent);
-            } else {
-                classLoader = new AntClassLoader(parent, true);
+        List<URL> urls = new ArrayList<>();
+        for (File path : paths) {
+            if (path.getName().startsWith("jenkins-test-harness")) {
+                throw new IllegalStateException("Refusing to load the Jenkins test harness in production (via "
+                        + atts.getValue("Short-Name") + ")");
             }
-            classLoader.addPathFiles(paths);
-            return classLoader;
-        } else {
-            List<URL> urls = new ArrayList<>();
-            for (File path : paths) {
-                urls.add(path.toURI().toURL());
-            }
-            URLClassLoader2 classLoader;
-            if (usePluginFirstClassLoader) {
-                classLoader = new PluginFirstClassLoader2(urls.toArray(new URL[0]), parent);
-            } else {
-                classLoader = new URLClassLoader2(urls.toArray(new URL[0]), parent);
-            }
-            return classLoader;
+            urls.add(path.toURI().toURL());
         }
+        URLClassLoader2 classLoader;
+        if (usePluginFirstClassLoader) {
+            classLoader = new PluginFirstClassLoader2(urls.toArray(new URL[0]), parent);
+        } else {
+            classLoader = new URLClassLoader2(urls.toArray(new URL[0]), parent);
+        }
+        return classLoader;
     }
 
     /**
@@ -338,7 +315,7 @@ public class ClassicPluginStrategy implements PluginStrategy {
         List<ExtensionFinder> finders;
         if (type == ExtensionFinder.class) {
             // Avoid infinite recursion of using ExtensionFinders to find ExtensionFinders
-            finders = Collections.singletonList(new ExtensionFinder.Sezpoz());
+            finders = List.of(new ExtensionFinder.Sezpoz());
         } else {
             finders = hudson.getExtensionList(ExtensionFinder.class);
         }
@@ -431,17 +408,6 @@ public class ClassicPluginStrategy implements PluginStrategy {
             if (classLoader instanceof DependencyClassLoader) {
                 return (DependencyClassLoader) classLoader;
             }
-
-            if (classLoader instanceof AntClassLoader) {
-                // AntClassLoaders hold parents not only as AntClassLoader#getParent()
-                // but also as AntClassLoader#getConfiguredParent()
-                DependencyClassLoader ret = findAncestorDependencyClassLoader(
-                        ((AntClassLoader) classLoader).getConfiguredParent()
-                );
-                if (ret != null) {
-                    return ret;
-                }
-            }
         }
         return null;
     }
@@ -528,7 +494,7 @@ public class ClassicPluginStrategy implements PluginStrategy {
 
         final long dirTime = archive.lastModified();
         // this ZipOutputStream is reused and not created for each directory
-        try (ZipOutputStream wrappedZOut = new ZipOutputStream(NullOutputStream.NULL_OUTPUT_STREAM) {
+        try (OutputStream nos = OutputStream.nullOutputStream(); ZipOutputStream wrappedZOut = new ZipOutputStream(nos) {
             @Override
             public void putNextEntry(ZipEntry ze) throws IOException {
                 ze.setTime(dirTime + 1999);   // roundup
@@ -597,7 +563,7 @@ public class ClassicPluginStrategy implements PluginStrategy {
         DependencyClassLoader(ClassLoader parent, File archive, List<Dependency> dependencies, PluginManager pluginManager) {
             super(parent);
             this._for = archive;
-            this.dependencies = Collections.unmodifiableList(new ArrayList<>(dependencies));
+            this.dependencies = List.copyOf(dependencies);
             this.pluginManager = pluginManager;
         }
 
@@ -612,7 +578,7 @@ public class ClassicPluginStrategy implements PluginStrategy {
             synchronized (this) {
               localTransitiveDependencies = transitiveDependencies;
               if (localTransitiveDependencies == null) {
-                CyclicGraphDetector<PluginWrapper> cgd = new CyclicGraphDetector<PluginWrapper>() {
+                CyclicGraphDetector<PluginWrapper> cgd = new CyclicGraphDetector<>() {
                     @Override
                     protected List<PluginWrapper> getEdges(PluginWrapper pw) {
                         List<PluginWrapper> dep = new ArrayList<>();
@@ -629,7 +595,7 @@ public class ClassicPluginStrategy implements PluginStrategy {
                     for (Dependency d : dependencies) {
                         PluginWrapper p = pluginManager.getPlugin(d.shortName);
                         if (p != null && p.isActive())
-                            cgd.run(Collections.singleton(p));
+                            cgd.run(Set.of(p));
                     }
                 } catch (CycleDetectedException e) {
                     throw new AssertionError(e);    // such error should have been reported earlier
@@ -715,7 +681,4 @@ public class ClassicPluginStrategy implements PluginStrategy {
             return null;
         }
     }
-
-    @SuppressFBWarnings(value = "MS_SHOULD_BE_FINAL", justification = "Accessible via System Groovy Scripts")
-    public static /* not final */ boolean useAntClassLoader = SystemProperties.getBoolean(ClassicPluginStrategy.class.getName() + ".useAntClassLoader");
 }
