@@ -31,6 +31,8 @@ import groovy.lang.GroovyShell;
 import hudson.FilePath;
 import hudson.Functions;
 import hudson.Util;
+import hudson.model.ModelObject;
+import hudson.model.User;
 import hudson.remoting.AsyncFutureImpl;
 import hudson.remoting.DelegatingCallable;
 import hudson.remoting.Future;
@@ -43,20 +45,24 @@ import java.io.StringWriter;
 import java.lang.management.ManagementFactory;
 import java.lang.management.ThreadInfo;
 import java.nio.file.Files;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.TreeMap;
+import java.util.UUID;
 import javax.management.JMException;
 import javax.management.MBeanServer;
 import javax.management.ObjectName;
 import jenkins.model.Jenkins;
 import jenkins.security.MasterToSlaveCallable;
+import jenkins.util.ScriptListener;
 import org.codehaus.groovy.control.CompilerConfiguration;
 import org.codehaus.groovy.control.customizers.ImportCustomizer;
+import org.kohsuke.accmod.Restricted;
+import org.kohsuke.accmod.restrictions.DoNotUse;
 import org.kohsuke.stapler.StaplerRequest;
 import org.kohsuke.stapler.StaplerResponse;
 import org.kohsuke.stapler.WebMethod;
+import org.kohsuke.stapler.interceptor.RequirePOST;
 
 /**
  * Various remoting operations related to diagnostics.
@@ -70,7 +76,7 @@ import org.kohsuke.stapler.WebMethod;
 public final class RemotingDiagnostics {
     public static Map<Object, Object> getSystemProperties(VirtualChannel channel) throws IOException, InterruptedException {
         if (channel == null)
-            return Collections.singletonMap("N/A", "N/A");
+            return Map.of("N/A", "N/A");
         return channel.call(new GetSystemProperties());
     }
 
@@ -85,13 +91,13 @@ public final class RemotingDiagnostics {
 
     public static Map<String, String> getThreadDump(VirtualChannel channel) throws IOException, InterruptedException {
         if (channel == null)
-            return Collections.singletonMap("N/A", "N/A");
+            return Map.of("N/A", "N/A");
         return channel.call(new GetThreadDump());
     }
 
     public static Future<Map<String, String>> getThreadDumpAsync(VirtualChannel channel) throws IOException, InterruptedException {
         if (channel == null)
-            return new AsyncFutureImpl<>(Collections.singletonMap("N/A", "offline"));
+            return new AsyncFutureImpl<>(Map.of("N/A", "offline"));
         return channel.callAsync(new GetThreadDump());
     }
 
@@ -113,7 +119,12 @@ public final class RemotingDiagnostics {
      * Executes Groovy script remotely.
      */
     public static String executeGroovy(String script, @NonNull VirtualChannel channel) throws IOException, InterruptedException {
-        return channel.call(new Script(script));
+        final String correlationId = UUID.randomUUID().toString();
+        final String context = channel.toString();
+        ScriptListener.fireScriptExecution(script, new Binding(), RemotingDiagnostics.class, context, correlationId, User.current());
+        final String output = channel.call(new Script(script));
+        ScriptListener.fireScriptOutput(output, RemotingDiagnostics.class, context, correlationId, User.current());
+        return output;
     }
 
     private static final class Script extends MasterToSlaveCallable<String, RuntimeException> implements DelegatingCallable<String, RuntimeException> {
@@ -169,7 +180,7 @@ public final class RemotingDiagnostics {
     private static class GetHeapDump extends MasterToSlaveCallable<FilePath, IOException> {
             @Override
             public FilePath call() throws IOException {
-                final File hprof = File.createTempFile("hudson-heapdump", "hprof");
+                final File hprof = File.createTempFile("hudson-heapdump", ".hprof");
                 Files.delete(Util.fileToPath(hprof));
                 try {
                     MBeanServer server = ManagementFactory.getPlatformMBeanServer();
@@ -189,7 +200,7 @@ public final class RemotingDiagnostics {
      * Heap dump, exposable to URL via Stapler.
      *
      */
-    public static class HeapDump {
+    public static class HeapDump implements ModelObject {
         private final AccessControlled owner;
         private final VirtualChannel channel;
 
@@ -198,14 +209,8 @@ public final class RemotingDiagnostics {
             this.channel = channel;
         }
 
-        /**
-         * Obtains the heap dump.
-         */
-        public void doIndex(StaplerResponse rsp) throws IOException {
-            rsp.sendRedirect("heapdump.hprof");
-        }
-
         @WebMethod(name = "heapdump.hprof")
+        @RequirePOST
         public void doHeapDump(StaplerRequest req, StaplerResponse rsp) throws IOException, InterruptedException {
             owner.checkPermission(Jenkins.ADMINISTER);
             rsp.setContentType("application/octet-stream");
@@ -218,8 +223,21 @@ public final class RemotingDiagnostics {
             }
         }
 
+        @Restricted(DoNotUse.class)
+        public AccessControlled getContext() {
+            if (owner instanceof ModelObject) {
+                return owner;
+            }
+            return Jenkins.get();
+        }
+
         public FilePath obtain() throws IOException, InterruptedException {
             return RemotingDiagnostics.getHeapDump(channel);
+        }
+
+        @Override
+        public String getDisplayName() {
+            return Messages.HeapDump_DisplayName();
         }
     }
 }
