@@ -55,7 +55,6 @@ import hudson.security.Permission;
 import hudson.security.ProjectMatrixAuthorizationStrategy;
 import hudson.util.FormValidation;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -74,6 +73,7 @@ import org.jvnet.hudson.test.JenkinsRule.WebClient;
 import org.jvnet.hudson.test.MockBuilder;
 import org.jvnet.hudson.test.MockQueueItemAuthenticator;
 import org.jvnet.hudson.test.TestBuilder;
+import org.springframework.security.core.Authentication;
 import org.xml.sax.SAXException;
 
 public class BuildTriggerTest {
@@ -151,11 +151,11 @@ public class BuildTriggerTest {
         auth.add(Computer.BUILD, "anonymous");
         j.jenkins.setAuthorizationStrategy(auth);
         final FreeStyleProject upstream = j. createFreeStyleProject("upstream");
-        org.acegisecurity.Authentication alice = User.getOrCreateByIdOrFullName("alice").impersonate();
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator(Collections.singletonMap("upstream", alice)));
+        Authentication alice = User.getOrCreateByIdOrFullName("alice").impersonate2();
+        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator().authenticate("upstream", alice));
         Map<Permission, Set<String>> perms = new HashMap<>();
-        perms.put(Item.READ, Collections.singleton("alice"));
-        perms.put(Item.CONFIGURE, Collections.singleton("alice"));
+        perms.put(Item.READ, Set.of("alice"));
+        perms.put(Item.CONFIGURE, Set.of("alice"));
         upstream.addProperty(new AuthorizationMatrixProperty(perms));
         String downstreamName = "d0wnstr3am"; // do not clash with English messages!
         FreeStyleProject downstream = j.createFreeStyleProject(downstreamName);
@@ -169,10 +169,10 @@ public class BuildTriggerTest {
         config.getButtonByCaption("Add post-build action").click(); // lib/hudson/project/config-publishers2.jelly
         page.getAnchorByText("Build other projects").click();
         HtmlTextInput childProjects = config.getInputByName("buildTrigger.childProjects");
-        childProjects.setValueAttribute(downstreamName);
+        childProjects.setValue(downstreamName);
         submit(config);
         */
-        assertEquals(Collections.singletonList(downstream), upstream.getDownstreamProjects());
+        assertEquals(List.of(downstream), upstream.getDownstreamProjects());
         // Downstream projects whose existence we are not aware of will silently not be triggered:
         assertDoCheck(alice, Messages.BuildTrigger_NoSuchProject(downstreamName, "upstream"), upstream, downstreamName);
         assertDoCheck(alice, null, null, downstreamName);
@@ -182,7 +182,7 @@ public class BuildTriggerTest {
         assertNull(downstream.getLastBuild());
         // If we can see them, but not build them, that is a warning (but this is in cleanUp so the build is still considered a success):
         Map<Permission, Set<String>> grantedPermissions = new HashMap<>();
-        grantedPermissions.put(Item.READ, Collections.singleton("alice"));
+        grantedPermissions.put(Item.READ, Set.of("alice"));
         AuthorizationMatrixProperty amp = new AuthorizationMatrixProperty(grantedPermissions);
         downstream.addProperty(amp);
         assertDoCheck(alice, Messages.BuildTrigger_you_have_no_permission_to_build_(downstreamName), upstream, downstreamName);
@@ -192,7 +192,7 @@ public class BuildTriggerTest {
         j.waitUntilNoActivity();
         assertNull(downstream.getLastBuild());
         // If we can build them, then great:
-        grantedPermissions.put(Item.BUILD, Collections.singleton("alice"));
+        grantedPermissions.put(Item.BUILD, Set.of("alice"));
         downstream.removeProperty(amp);
         amp = new AuthorizationMatrixProperty(grantedPermissions);
         downstream.addProperty(amp);
@@ -207,7 +207,7 @@ public class BuildTriggerTest {
         assertNotNull(cause);
         assertEquals(b, cause.getUpstreamRun());
         // Now if we have configured some QIA’s but they are not active on this job, we should normally fall back to running as anonymous. Which would normally have no permissions:
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().replace(new MockQueueItemAuthenticator(Collections.singletonMap("upstream", Jenkins.ANONYMOUS)));
+        QueueItemAuthenticatorConfiguration.get().getAuthenticators().replace(new MockQueueItemAuthenticator().authenticate("upstream", Jenkins.ANONYMOUS2));
         assertDoCheck(alice, Messages.BuildTrigger_you_have_no_permission_to_build_(downstreamName), upstream, downstreamName);
         assertDoCheck(alice, null, null, downstreamName);
         b = j.buildAndAssertSuccess(upstream);
@@ -215,8 +215,8 @@ public class BuildTriggerTest {
         j.waitUntilNoActivity();
         assertEquals(1, downstream.getLastBuild().number);
         // Unless we explicitly granted them:
-        grantedPermissions.put(Item.READ, Collections.singleton("anonymous"));
-        grantedPermissions.put(Item.BUILD, Collections.singleton("anonymous"));
+        grantedPermissions.put(Item.READ, Set.of("anonymous"));
+        grantedPermissions.put(Item.BUILD, Set.of("anonymous"));
         downstream.removeProperty(amp);
         amp = new AuthorizationMatrixProperty(grantedPermissions);
         downstream.addProperty(amp);
@@ -243,9 +243,9 @@ public class BuildTriggerTest {
         j.buildAndAssertSuccess(simple);
     }
 
-    private void assertDoCheck(org.acegisecurity.Authentication auth, @CheckForNull String expectedError, AbstractProject<?, ?> project, String value) {
+    private void assertDoCheck(Authentication auth, @CheckForNull String expectedError, AbstractProject<?, ?> project, String value) {
         FormValidation result;
-        try (ACLContext c = ACL.as(auth)) {
+        try (ACLContext c = ACL.as2(auth)) {
             result = j.jenkins.getDescriptorByType(BuildTrigger.DescriptorImpl.class).doCheck(project, value);
         }
         if (expectedError == null) {
